--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "babel-preset-es2015": "^6.6.0",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
+    "gulp-add-src": "^0.2.0",
     "gulp-angular-filesort": "^1.1.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
-    "gulp-flatten": "^0.2.0",
     "gulp-inject": "^4.0.0",
+    "gulp-insert": "^0.5.0",
     "gulp-jshint": "^2.0.0",
+    "gulp-merge-json": "^0.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-sort": "^2.0.0",
     "gulp-uglify": "^1.4.2",
