Added extended uid mirroring and extended tag tech UID mirroring now enabled in write uri/text/multi-record Type 1 polling for read ndef and detect tag on TCMP Type 1 polling for write ndef on TCMP Type 4B polling enabled on TCMP Get firmware/hardware version on TCMP Can now enable full Type 2 enumeration on TCMP

--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "tappy-chromeserialcommunicator": "~1.0.0",
     "tappy-tcmpchromeserialautodetector": "~1.0.0",
     "tappy-systemfamily": "~1.0.0",
-    "tappy-basicnfcfamily": "~1.1.0"
+    "tappy-basicnfcfamily": "~1.1.0",
+    "tappy-type4family": "~1.0.0"
   },
   "overrides": {
     "angular": {
@@ -45,6 +46,6 @@
     }
   },
   "resolutions": {
-    "angular": "1.5.7"
+    "angular": "1.5.9"
   }
 }
